<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- PlugPDF Text -->
    <string name="text_search_progress">searching keyword.</string>
    <string name="text_search_found_fail">not found keyword.</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_password">input password.</string>
    <string name="text_rotate_lock">rotation lock.</string>
    <string name="text_rotate_unlock">rotation unlock.</string>
    <string name="text_annot_menu_item_delete">Delete</string>
    <string name="text_annot_menu_item_edit">Edit</string>
    <string name="text_annot_menu_item_color">Color</string>
    <string name="text_annot_menu_item_opacity">Clearity</string>
    <string name="text_annot_menu_item_width">Width</string>
    <string name="text_annot_menu_item_color_white">White</string>
    <string name="text_annot_menu_item_color_black">Black</string>
    <string name="text_annot_menu_item_color_red">Red</string>
    <string name="text_annot_menu_item_color_orange">Orange</string>
    <string name="text_annot_menu_item_color_yellow">Yellow</string>
    <string name="text_annot_menu_item_color_green">Green</string>
    <string name="text_annot_menu_item_color_blue">Blue</string>
    <string name="text_annot_menu_item_color_purple">Purple</string>
    <string name="text_annot_menu_item_opacity_10">10%</string>
    <string name="text_annot_menu_item_opacity_25">25%</string>
    <string name="text_annot_menu_item_opacity_50">50%</string>
    <string name="text_annot_menu_item_opacity_75">75%</string>
    <string name="text_annot_menu_item_opacity_100">100%</string>
    <string name="text_annot_menu_item_width_1">1Px</string>
    <string name="text_annot_menu_item_width_3">3Px</string>
    <string name="text_annot_menu_item_width_5">5Px</string>
    <string name="text_annot_menu_item_width_7">7Px</string>
    <string name="text_annot_menu_item_width_9">9Px</string>
    <string name="text_annot_menu_item_width_11">11Px</string>

    <!-- Text -->
    <string name="text_search">search</string>
    <string name="text_color">color</string>
    <string name="text_fill_color">fill color</string>
    <string name="text_opacity">opacity</string>
    <string name="text_width">width</string>
    <string name="text_straight">straight</string>
    <string name="text_notice">Notice</string>
    <string name="text_url_downloading">Please Wait for downloading</string>
	
    <!-- Button Label -->
    <string name="label_save_button">save</string>
    <string name="label_back_button">back</string>
    <string name="label_erase_button">delete</string>
    <string name="label_change_button">change</string>
	<string name="label_outline_title">Set outline title:</string>
	<string name="label_outline_child_check">is Child</string>
    <string name="text_squiggly">Squiggly</string>

    
    <!-- ImageView description -->
    <string name="bottom_menu_thumbnail">bottom thumbnail</string>
    
</resources>