<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#B4848484"
    android:orientation="vertical"
    android:spinnerMode="dialog"
    android:padding="20dp" >

    <TextView
        android:id="@+id/annot_line_color_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_color"
        android:textColor="#FF2E2E2E"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/annot_line_color_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/annot_line_colors" />

    <TextView
        android:id="@+id/annot_fill_color_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fill_color"
        android:textColor="#FF2E2E2E"
        android:textSize="20sp" />
	<Spinner
	        android:id="@+id/annot_fill_color_value"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/annot_line_colors" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/annot_opacity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_opacity"
            android:textColor="#FF2E2E2E"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/annot_opacity_value_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="#FF2E2E2E"
            android:textSize="20sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/annot_opacity_value"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:max="255"
        android:progress="255" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/annot_line_width_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_width"
            android:textColor="#FF2E2E2E"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/annot_line_width_value_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="#FF2E2E2E"
            android:textSize="20sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/annot_line_width_value"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:max="32"
        android:progress="32" />

    <CheckBox
        android:id="@+id/annot_line_straight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_straight"
        android:textColor="#FF2E2E2E" />

    <CheckBox
        android:id="@+id/annot_line_squiggly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_squiggly"
        android:textColor="#FF2E2E2E" />
    
</LinearLayout>